test_suite/tests/ui/borrow/bad_lifetimes.stderr
error: failed to parse borrowed lifetimes: "zzz"
 --> tests/ui/borrow/bad_lifetimes.rs:5:22
  |
5 |     #[serde(borrow = "zzz")]
  |                      ^^^^^
