test_suite/tests/ui/borrow/bad_lifetimes.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
struct Test<'a> {
    #[serde(borrow = "zzz")]
    s: &'a str,
}

fn main() {}
